# range-tree

./: .gitignore  CMakeLists.txt  RangeTree.h  doctest.h
include/: RangeTree.h
test/: Point_test.cpp  RangeTree_test.cpp  SortedPointsMatrix_test.cpp
tests/: CMakeLists.txt  Point_test.cpp  RangeTree_test.cpp  SortedPointsMatrix_test.cpp
